# hianime-cli

./: README.md  pyproject.toml
mov_cli_hianime/: __init__.py  scraper.py
myanimeplugin/: __init__.py
myanimeplugin/animepahe/: scraper.py
myanimeplugin/hianime/: scraper.py
