[project]
name = "MyAnimePlugin"
description = "darkgamma hates weebs (and hianime)"
authors = [
    {name = "GDjkhp", email = "jkhp.jkpa@gmail.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = [
    "mov-cli",
    "aniwatch",
    "hianime",
    "animepahe",
    "anime",
    "🐔👔"
]
classifiers = [
    'Operating System :: Microsoft :: Windows :: Windows 11',
    'Operating System :: Microsoft :: Windows :: Windows 10',
    'Operating System :: POSIX :: Linux',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12'
]
dependencies = [
    "requests",
    "importlib-metadata; python_version<'3.8'",
    "mov-cli>=4.3"
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
    "build"
]

[project.urls]
GitHub = "https://github.com/GDjkhp/mov-cli-hianime"
BugTracker = "https://github.com/GDjkhp/mov-cli-hianime/issues"

[tool.setuptools.dynamic]
version = { attr = "myanimeplugin.__version__" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["myanimeplugin*"]